# selenium-docker-example

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
seleniumdockerexample/: __main__.py  settings.py
