[tool.poetry]
name = "seleniumdockerexample"
version = "0.1.0"
description = ""
authors = ["FR44 <fr440305@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
